update cryptML to evaluate data-tags records update demandjs to latest rc10 version implement demandjs resource offloading in the hopes of reducing memory consumption especially on mobile, testing is limited but looks fine on my android phones add filtering feature to allow showing only content with specified tags add offloading to s3was editor update s3was editor to produce some code comments around script arguments so it's a little easier to get going with such scripts when not familiar with the codebase update s3was to fix issue with latest chrome browsers defaulting to fixing image orientation and adjust some broken css rules around various jpeg orientation codes that didn't seem to be working right tweak to s3was generation of video thumbnail size calculations

--- a/s3was/s3was.css
+++ b/s3was/s3was.css
@@ -168,7 +168,7 @@
   display:block;
 }
 .timeline-selection, .timeline-primary {
-  position: relative;
+  position: absolute;
   max-width: 0;
   max-height: 0;
   opacity:0;
